--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -24,8 +24,12 @@ Graphics:
 
 
 Current tasks:
-    - Add rock/door/switch sound effects
+    - update cloud graphics
+        - Add new graphics over deleted water graphics.
+        - Run migration to switch to new graphics
+        - Delete old cloud graphics.
     - brainstorm some dungeon/boss ideas, maybe for Staff Tower
+    - Do a regression test and release latest version.
 
 
 High level list of things left to do:
